# xrpl-x402-stack

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_PYPI.md  SECURITY.md  demo.contract.json  demo.run.sh  docker-compose.yml  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml  docs-pages.yml  publish-package.yml
app/: assets.py  factory.py  gateway_auth.py  models.py  redis_utils.py  replay_store.py  xrpl_service.py
devtools/: __init__.py  demo_env.py  demo_rebalance.py  demo_trace.py  live_testnet_support.py  quickstart.py  rlusd_topup.py  usdc_topup.py
docs/: index.md  release.md  troubleshooting.md
docs/asset-guides/: rlusd.md  usdc.md
docs/how-it-works/: header-contract.md  payment-flow.md  replay-and-freshness.md
docs/integrations/: x402-adapters.md
docs/quickstart/: testnet-xrp.md
docs/stylesheets/: extra.css
examples/: buyer_httpx.py
examples/merchant_fastapi/: app.py
src/xrpl_x402_middleware/: __init__.py  client.py  exceptions.py  middleware.py  types.py  utils.py
tests/: conftest.py  fakes.py  test_api.py  test_assets.py  test_config.py  test_demo_env.py  test_demo_rebalance.py  test_examples.py  test_live_testnet_support.py  test_quickstart.py  test_stack_package_exports.py  test_testnet_rpc.py  test_x402_adapters.py  test_xrpl_service.py  test_xrpl_x402_client.py  test_xrpl_x402_local_integration.py  test_xrpl_x402_middleware.py  test_xrpl_x402_package.py  test_xrpl_x402_payer.py
tests/integration/: test_live_testnet.py
