[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "xrpl-x402-middleware"
version = "0.1.0"
description = "Python x402 middleware for XRPL-backed API payments"
readme = { file = "README_PYPI.md", content-type = "text/markdown" }
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Louis-Guillaume Carrier-Bedard", email = "lgcarrier@gmail.com" },
]
keywords = ["xrpl", "xrp", "x402", "middleware", "fastapi", "payments", "api"]
import-names = ["xrpl_x402_middleware"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "httpx==0.28.1",
  "pydantic>=2,<3",
  "starlette>=0.37,<1",
]

[project.urls]
Homepage = "https://github.com/lgcarrier/xrpl-x402-facilitator"
Documentation = "https://github.com/lgcarrier/xrpl-x402-facilitator#python-middleware-package"
Repository = "https://github.com/lgcarrier/xrpl-x402-facilitator"
Issues = "https://github.com/lgcarrier/xrpl-x402-facilitator/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/xrpl_x402_middleware"]

[tool.hatch.build.targets.sdist]
include = [
  "/src/xrpl_x402_middleware",
  "/tests",
  "/README.md",
  "/README_PYPI.md",
  "/requirements.txt",
  "/requirements-dev.txt",
  "/LICENSE",
]
